tests/render_snapshots/snapshots/render_snapshots__connection_management__connection_selector_with_long_service_name.snap
---
source: tests/render_snapshots/connection_management.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│               ╭ Select Connection ───────────────────────────╮               │
│               │>   my-very-long-servic…  from pg_service.conf│               │
│               │    short          from pg_service.conf       │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ Enter Confirm  n New  Esc/q Close ───────────╯               │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Confirm  n:New  Esc/q:Close
