tests/render_snapshots/snapshots/render_snapshots__connection_management__connection_selector_with_multiple_connections.snap
---
source: tests/render_snapshots/connection_management.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│               ╭ Select Connection ───────────────────────────╮               │
│               │> ● Production                                │               │
│               │    Staging                                   │               │
│               │    Local Dev                                 │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │───────────────┘
│               │                                              │───────────────┐
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               ╰ Enter Confirm  n New  e Edit  d Delete  Esc/q╯               │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
Enter:Confirm  n:New  e:Edit  d:Delete  Esc/q:Close
